update tools.js url

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         href="https://leverage-html.codings.dev/assets/images/apple-touch-icon-114x114.png">
 
 
-        <script src="../softwarewallafrontend//assets//js/tools.js"></script>
+        <script src="/assets/js/tools.js"></script>
     <!-- ==============================================
         Vendor Stylesheet
         =============================================== -->
