--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -13,7 +13,7 @@
 
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
 
-    <title>Terms and Conditions - Softwarewala</title>
+    <title>Terms and Conditions - amztools</title>
 
     <meta name="robots" content="noindex">
 
@@ -309,7 +309,7 @@
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
                             <a href="https://softwarewalaa.com" class="logo">
-                                Softwarewalaa
+                                amztools
                             </a>
                             <br>
                             <br>
@@ -387,13 +387,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/"> softwarewalaa.com </a></p>
+                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/"> amztools.com </a></p>
                         <!--
                                 Suggestion: Replace the text above with a description of your website.
                              -->
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
-                        <p>© 2024 Copyright | All Rights Reserved by softwarewalaa.com <a href="#" target="_blank"></a>.
+                        <p>© 2024 Copyright | All Rights Reserved by amztools.com <a href="#" target="_blank"></a>.
                         </p>
                     </div>
                 </div>
