--- a/all-tools.html
+++ b/all-tools.html
@@ -13,7 +13,7 @@
 
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
 
-    <title>All Tools - softwarewalaa</title>
+    <title>All Tools - amtools</title>
     <meta name="description"
         content="Browse our All Tools page for 20+ affordable, high-quality tools. Detailed descriptions and easy navigation to find the right equipment for your projects.">
     <meta name="keywords"
@@ -65,7 +65,7 @@
             --footer-bg-color: #f5f5f5;
         }
 
-        .bundleCard:hover {
+        .bundlecard:hover {
             background: #f5f5f5 !important;
             color: var(--primary-color);
         }
@@ -326,7 +326,7 @@
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
                             <a href="https://softwarewalaa.com" class="logo">
-                                Softwarewalaa
+                                amztools
                             </a>
                             <br>
                             <br>
@@ -404,13 +404,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/"> softwarewalaa.com </a></p>
+                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/"> amztools.com </a></p>
                         <!--
                                 Suggestion: Replace the text above with a description of your website.
                              -->
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
-                        <p>© 2024 Copyright | All Rights Reserved by softwarewalaa.com <a href="#" target="_blank"></a>.
+                        <p>© 2024 Copyright | All Rights Reserved by amztools.com <a href="#" target="_blank"></a>.
                         </p>
                     </div>
                 </div>
@@ -729,7 +729,7 @@
 
             buyButtons.forEach(button => {
                 button.addEventListener('click', function () {
-                    const card = button.closest('.bundleCard');
+                    const card = button.closest('.bundlecard');
                     const imageSrc = card.querySelector('.card-img').src;
                     const price = card.querySelector('.card-price').textContent;
 
