--- a/bundles.html
+++ b/bundles.html
@@ -15,7 +15,7 @@
 
 
 
-    <title>All Bundles - softwarewalaa</title>
+    <title>All Bundles - amztools</title>
     <meta name="description"
         content="Explore affordable software bundles at World’s Best Tool Provider. Find high-quality solutions to boost productivity with one-click access.">
     <meta name="keywords"
@@ -477,7 +477,7 @@
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
                             <a href="https://softwarewalaa.com" class="logo">
-                                Softwarewalaa
+                                amztools
                             </a>
                             <br>
                             <br>
@@ -555,13 +555,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/"> softwarewalaa.com </a></p>
+                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/"> amztools.com </a></p>
                         <!--
                                 Suggestion: Replace the text above with a description of your website.
                              -->
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
-                        <p>© 2024 Copyright | All Rights Reserved by softwarewalaa.com <a href="#" target="_blank"></a>.
+                        <p>© 2024 Copyright | All Rights Reserved by amztools.com <a href="#" target="_blank"></a>.
                         </p>
                     </div>
                 </div>
