--- a/all-tools.html
+++ b/all-tools.html
@@ -307,7 +307,8 @@
                     </div>
                         <div>
                             <p style="margin-top:5px; margin-bottom:1px; padding:0px; text-align:center; font-weight:500;">Contact Details</p>
-                            <a href="tel:+918200631993" style="text-decoration: none; color: blue;">+91 820 063 1993</a>
+                            <a href="https://wa.me/918200631993" style="text-decoration: none; color: blue;">+91 820 063 1993</a>
+
 
                         </div>
                     </div>
