--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         href="https://leverage-html.codings.dev/assets/images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114"
         href="https://leverage-html.codings.dev/assets/images/apple-touch-icon-114x114.png">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!-- ==============================================
         Vendor Stylesheet
@@ -592,7 +593,7 @@
                             <h5>Choose Pricing Option:</h5>
                             <div class="d-flex flex-wrap gap-2">
                                 <button class="btn btn-outline-primary pricing-btn" id="monthly-btn" data-price="month">1 Month</button>
-                                <button class="btn btn-outline-primary pricing-btn" id="quarterly-btn" data-price="quarter">3 Month</button>
+                                <button class="btn btn-outline-primary pricing-btn" id="quarterly-btn" data-price="quarter">2 Month</button>
                                 <button class="btn btn-outline-primary pricing-btn" id="yearly-btn" data-price="yearly">12 Month</button>
                             </div>
                         </div>
@@ -624,6 +625,7 @@
             </div>
         </div>
         
+        
         <!-- Payment Info Modal -->
         <div class="modal" id="paymentInfoModal" tabindex="-1" aria-hidden="true">
             <div class="modal-dialog">
@@ -639,11 +641,13 @@
                         </div>
                         <div>
                         <img id="qrCode" src="" alt="Payment QR Code" class="img-fluid" style="width: 50%; height: auto;">
+                        <p id="contact" style="text-align: center;"></p>
                     </div>
                         <div>
                             <p style="margin-top:5px; margin-bottom:1px; padding:0px; text-align:center; font-weight:500;">Contact Details</p>
-                            <a href="tel:+918200631993" style="text-decoration: none; color: blue;">+91 820 063 1993</a>
-
+                            <a href="https://wa.me/918200631993" target="_blank" style="text-decoration: none; color: green;">
+                                <i class="fab fa-whatsapp" style="font-size: 24px;"></i> <!-- WhatsApp Icon -->
+                            </a>
                         </div>
                     </div>
                     <div>
