--- a/users.html
+++ b/users.html
@@ -13,7 +13,7 @@
 
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
 
-    <title>amztools Users Data</title>
+    <title>Toolswala Users Data</title>
 
 
     <meta name="robots" content="noindex">
@@ -129,7 +129,7 @@
                                 class="icon-speech"></i>CONTACT US</a>
                     </li> -->
                         <li class="nav-item mt-3 w-100">
-                            <a target="_blank" href="https://app.toolswalaa.com/login"
+                            <a target="_blank" href="https://app.toolswalaa.com/member"
                                 class="btn ml-lg-auto primary-button w-100">
                                 <i class="icon-login"></i>
                                 Login</a>
@@ -184,7 +184,7 @@
                                 class="icon-speech"></i>CONTACT US</a>
                     </li> -->
                     <li class="nav-item ml-3">
-                        <a target="_blank" href="https://app.toolswalaa.com/login"
+                        <a target="_blank" href="https://app.toolswalaa.com/member"
                             class="btn ml-lg-auto primary-button ">
                             <i class="icon-login"></i>
                             Login</a>
