--- a/refund-and-cancellation.html
+++ b/refund-and-cancellation.html
@@ -13,7 +13,7 @@
 
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
 
-    <title>Refund Policy - amztools</title>
+    <title>Refund Policy - Toolswala</title>
 
 
     <meta name="robots" content="noindex">
@@ -129,7 +129,7 @@
                                 class="icon-speech"></i>CONTACT US</a>
                     </li> -->
                         <li class="nav-item mt-3 w-100">
-                            <a target="_blank" href="https://app.toolswalaa.com/login"
+                            <a target="_blank" href="https://app.toolswalaa.com/member"
                                 class="btn ml-lg-auto primary-button w-100">
                                 <i class="icon-login"></i>
                                 Login</a>
@@ -184,7 +184,7 @@
                                 class="icon-speech"></i>CONTACT US</a>
                     </li> -->
                     <li class="nav-item ml-3">
-                        <a target="_blank" href="https://app.toolswalaa.com/login"
+                        <a target="_blank" href="https://app.toolswalaa.com/member"
                             class="btn ml-lg-auto primary-button ">
                             <i class="icon-login"></i>
                             Login</a>
@@ -261,7 +261,7 @@
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
                             <a href="https://softwarewalaa.com" class="logo">
-                                amztools
+                                Toolswala
                             </a>
                             <br>
                             <br>
@@ -339,13 +339,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/"> amztools.com </a></p>
+                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/"> Toolswala </a></p>
                         <!--
                                 Suggestion: Replace the text above with a description of your website.
                              -->
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
-                        <p>© 2024 Copyright | All Rights Reserved by amztools.com <a href="#" target="_blank"></a>.
+                        <p>© 2024 Copyright | All Rights Reserved by Toolswala <a href="#" target="_blank"></a>.
                         </p>
                     </div>
                 </div>
