--- a/all-tools.html
+++ b/all-tools.html
@@ -312,7 +312,8 @@
                         <div class="mt-4 d-flex flex-column align-items-center">
                             <p class="fw-bold mb-1">Contact Details</p>
                             <a href="https://wa.me/918200891775" target="_blank" class="text-decoration-none text-success">
-                                <i class="fab fa-whatsapp" style="font-size: 40px;"></i> <!-- WhatsApp Icon -->
+                                <!-- .<i class="fab fa-whatsapp" style="font-size: 40px;"></i> WhatsApp Icon -->
+                                <img src="./assets/images/whatsapplogo.jpeg" alt="WhatsApp Contact" class="whatsapp-logo">
                             </a>
                         </div>
                     </div>
@@ -733,7 +734,7 @@
     </div> -->
 
     <div id="whatsappContact">
-        <a href="https://wa.me/message/JZIT6T3AXZBNP1" target="_blank" rel="noopener noreferrer">
+        <a href="https://wa.me/918200891775" target="_blank" rel="noopener noreferrer">
             <img src="./assets/images/whatsapplogo.jpeg" alt="WhatsApp Contact" class="whatsapp-logo">
         </a>
     </div>
