--- a/index.html
+++ b/index.html
@@ -647,7 +647,8 @@
                         <div class="mt-4 d-flex flex-column align-items-center">
                             <p class="fw-bold mb-1">Contact Details</p>
                             <a href="https://wa.me/918200891775" target="_blank" class="text-decoration-none text-success">
-                                <i class="fab fa-whatsapp" style="font-size: 40px;"></i> <!-- WhatsApp Icon -->
+                                <!-- <i class="fab fa-whatsapp" style="font-size: 40px;"></i> WhatsApp Icon -->
+                                <img src="./assets/images/whatsapplogo.jpeg" alt="WhatsApp Contact" class="whatsapp-logo">
                             </a>
                         </div>
                     </div>
@@ -1409,7 +1410,7 @@
                                     </div>
 
                                     <div class="text-center mt-3">
-                                        <a href="https://wa.me/message/JZIT6T3AXZBNP1" target="_blank"
+                                        <a href="https://wa.me/918200891775" target="_blank"
                                             rel="noopener noreferrer" class="btn primary-button w-100">whatsapp</a>
                                     </div>
                                 </div>
@@ -1548,7 +1549,7 @@
                                         </div>
                                     </div>
                                     <div class="text-center mt-3">
-                                        <a href="https://wa.me/message/JZIT6T3AXZBNP1" target="_blank"
+                                        <a href="https://wa.me/918200891775" target="_blank"
                                             rel="noopener noreferrer" class="btn primary-button w-100">whatsapp</a>
                                     </div>
                                 </div>
@@ -1602,7 +1603,7 @@
 
 
     <div id="whatsappContact">
-        <a href="https://wa.me/message/JZIT6T3AXZBNP1" target="_blank" rel="noopener noreferrer">
+        <a href="https://wa.me/918200891775" target="_blank" rel="noopener noreferrer">
             <img src="./assets/images/whatsapplogo.jpeg" alt="WhatsApp Contact" class="whatsapp-logo">
         </a>
     </div>
