--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -693,7 +693,7 @@
         </a>
     </div> -->
     <div id="whatsappContact">
-        <a href="https://wa.me/message/JZIT6T3AXZBNP1" target="_blank" rel="noopener noreferrer">
+        <a href="https://wa.me/918200891775" target="_blank" rel="noopener noreferrer">
             <img src="./assets/images/whatsapplogo.jpeg" alt="WhatsApp Contact" class="whatsapp-logo">
         </a>
     </div>
