--- a/all-tools.html
+++ b/all-tools.html
@@ -281,9 +281,14 @@
                         <div class="payment-options">
                             <h5>Payment Options:</h5>
                             <div class="d-flex flex-wrap gap-2">
-                                <button class="btn btn-outline-primary" id="payWithUPI">Paytm</button>
-                                <button class="btn btn-outline-primary" id="payWithPayPal">PayPal</button>
+                                <button class="payment-btn btn btn-outline-primary" id="payWithUPI">Paytm</button>
+                                <button class="payment-btn btn btn-outline-primary" id="payWithPayPal">PayPal</button>
                             </div>
+                        </div>
+                        <div>
+                            <button id="buyButton" class="btn mx-auto btn-primary smooth-anchor mt-10 buy-button" >
+                        <i class="icon-arrow-right-circle" style="margin-left: 5px;"></i> Proceed to buy
+                    </button>
                         </div>
                     </div>
                 </div>
@@ -347,7 +352,7 @@
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
                             <a href="https://softwarewalaa.com" class="logo">
-                                Toolswala
+                                Toolswalaa
                             </a>
                             <br>
                             <br>
