--- a/contact-us.html
+++ b/contact-us.html
@@ -13,7 +13,7 @@
 
     <!--[if IE]><meta http-equiv="x-ua-compatible" content="IE=9" /><![endif]-->
 
-    <title>Contact us - Toolswala</title>
+    <title>Contact us - Toolswalaa</title>
 
 
     <meta name="description" content="Creative Agency, Portfolio, Corporate, Startup & Technology">
@@ -231,12 +231,12 @@
                     <!-- <p>9992295288</p> -->
                     <a href="tel:9327790830" class="nav-link">
                         <i class="icon-envelope mr-2"></i>
-                        9327790830
+                        8200891775
                     </a>
                     <h4>Email</h4>
                     <a href="mailto:Softwerewalaa@gmail.com" class="nav-link">
                         <i class="icon-envelope mr-2"></i>
-                        Softwerewalaa@gmail.com
+                        moinchandiwala95@gmail.com
                     </a>
                 </div>
 
@@ -292,7 +292,7 @@
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
                             <a href="https://softwarewalaa.com" class="logo">
-                                Toolswala
+                                Toolswalaa
                             </a>
                             <br>
                             <br>
@@ -376,7 +376,7 @@
                              -->
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
-                        <p>© 2024 Copyright | All Rights Reserved by Toolswala <a href="#" target="_blank"></a>.</p>
+                        <p>© 2024 Copyright | All Rights Reserved by Toolswalaa <a href="#" target="_blank"></a>.</p>
                     </div>
                 </div>
             </div>
