--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="description"
         content="Shop 20+ affordable, high-quality tools with one-click access at World’s Best Tool Provider. Quality equipment for hobbyists and professionals.">
     <meta name="keywords"
-        content="Toolswala, tool provider, software bundles, affordable tools, tool provider, tool bundles, quality tool, Agency tool">
+        content="Toolswalaa, tool provider, software bundles, affordable tools, tool provider, tool bundles, quality tool, Agency tool">
     <link rel="canonical" href="https://www.softwarewalaa.com/" />
 
 
@@ -283,7 +283,7 @@
                         href="https://youtu.be/2dRokG3iYVc">
                         <i class="play-video icon-control-play"></i>
                         <div class="mask-radius"></div>
-                        <img src="assets/images/introvideo.jpeg" class="fit-image" alt="Institutional">
+                        <img src="./assets/images/thumbnail.jpg" class="fit-image" alt="Institutional">
                     </a>
                 </div>
                 <div class="col-12 col-md-6 pl-md-5 align-self-center text-center text-md-left">
@@ -616,10 +616,16 @@
                         <div class="payment-options">
                             <h5>Payment Options:</h5>
                             <div class="d-flex flex-wrap gap-2">
-                                <button class="btn btn-outline-primary" id="payWithUPI">Paytm</button>
-                                <button class="btn btn-outline-primary" id="payWithPayPal">PayPal</button>
+                                <button class="payment-btn btn btn-outline-primary" id="payWithUPI">UPI</button>
+                                <button class="payment-btn btn btn-outline-primary" id="payWithPayPal">PayPal</button>
                             </div>
                         </div>
+                    <div>
+                        <button id="buyButton" class="btn mx-auto btn-primary smooth-anchor mt-10 buy-button" >
+                    <i class="icon-arrow-right-circle" style="margin-left: 5px;"></i> Proceed to buy
+                </button>
+                    </div>
+
                     </div>
                 </div>
             </div>
@@ -1065,7 +1071,7 @@
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
                             <a href="https://softwarewalaa.com" class="logo">
-                                Toolswala
+                                Toolswalaa
                             </a>
                             <br>
                             <br>
