--- a/refund-and-cancellation.html
+++ b/refund-and-cancellation.html
@@ -261,7 +261,7 @@
                     <div class="col-lg-5 p-3 text-center text-lg-left item">
                         <div class="brand">
                             <a href="https://softwarewalaa.com" class="logo">
-                                Toolswala
+                                Toolswalaa
                             </a>
                             <br>
                             <br>
@@ -339,13 +339,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/"> Toolswala </a></p>
+                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/"> Toolswalaa </a></p>
                         <!--
                                 Suggestion: Replace the text above with a description of your website.
                              -->
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
-                        <p>© 2024 Copyright | All Rights Reserved by Toolswala <a href="#" target="_blank"></a>.
+                        <p>© 2024 Copyright | All Rights Reserved by Toolswalaa <a href="#" target="_blank"></a>.
                         </p>
                     </div>
                 </div>
