fix contact page

--- a/bundles.html
+++ b/bundles.html
@@ -472,7 +472,7 @@
                                         <button class="payment-btn btn btn-outline-primary" id="payWithPayPal">PayPal</button>
                                     </div>
                                 </div>
-                                <div>
+                                <div class="buy-button-container">
                                     <button id="buyButton" class="btn mx-auto btn-primary smooth-anchor mt-10 buy-button" >
                                 <i class="icon-arrow-right-circle" style="margin-left: 5px;"></i> Proceed to buy
                             </button>
@@ -639,13 +639,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/"> Toolswala </a></p>
+                        <p>Designed with ❤️ by <a href="http://amztools.org"> AMZ Tools </a></p>
                         <!--
                                 Suggestion: Replace the text above with a description of your website.
                              -->
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
-                        <p>© 2024 Copyright | All Rights Reserved by Toolswala <a href="#" target="_blank"></a>.
+                        <p>© 2024 Copyright | All Rights Reserved by AMZ Tools <a href="#" target="_blank"></a>.
                         </p>
                     </div>
                 </div>
