--- a/contact-us.html
+++ b/contact-us.html
@@ -229,12 +229,12 @@
                         Gujarat - 395003</address>
                     <h4>Phone Number</h4>
                     <!-- <p>9992295288</p> -->
-                    <a href="tel:9327790830" class="nav-link">
+                    <a href="tel:8200891775" class="nav-link">
                         <i class="icon-envelope mr-2"></i>
                         8200891775
                     </a>
                     <h4>Email</h4>
-                    <a href="mailto:Softwerewalaa@gmail.com" class="nav-link">
+                    <a href="mailto:moinchandiwala95@gmail.com" class="nav-link">
                         <i class="icon-envelope mr-2"></i>
                         moinchandiwala95@gmail.com
                     </a>
@@ -370,13 +370,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/" > Toolswala </a></p>
+                        <p>Designed with ❤️ by <a href="http://amztools.org">AMZ Tools</a></p>
                         <!--
                                 Suggestion: Replace the text above with a description of your website.
                              -->
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
-                        <p>© 2024 Copyright | All Rights Reserved by Toolswalaa <a href="#" target="_blank"></a>.</p>
+                        <p>© 2024 Copyright | All Rights Reserved by AMZ Tools <a href="#" target="_blank"></a>.</p>
                     </div>
                 </div>
             </div>
