--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -414,13 +414,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/"> Toolswalaa </a></p>
+                        <p>Designed with ❤️ by <a href="http://amztools.org"> AMZ Tools </a></p>
                         <!--
                                 Suggestion: Replace the text above with a description of your website.
                              -->
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
-                        <p>© 2024 Copyright | All Rights Reserved by Toolswalaa <a href="#" target="_blank"></a>.
+                        <p>© 2024 Copyright | All Rights Reserved by AMZ Tools <a href="#" target="_blank"></a>.
                         </p>
                     </div>
                 </div>
