--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -408,7 +408,7 @@
             <div class="col-12 col-md-6 p-3 text-center text-lg-left">
               <p>
                 Designed with ❤️ by
-                <a href="http://softwarewalaa.com/"> Toolswala </a>
+                <a href="http://amztools.org"> AMZ Tools </a>
               </p>
               <!--
                                 Suggestion: Replace the text above with a description of your website.
@@ -416,7 +416,7 @@
             </div>
             <div class="col-12 col-md-6 p-3 text-center text-lg-right">
               <p>
-                © 2024 Copyright | All Rights Reserved by Toolswala
+                © 2024 Copyright | All Rights Reserved by AMZ Tools
                 <a href="#" target="_blank"></a>.
               </p>
             </div>
