--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
         =============================================== -->
         <!-- <script src="/assets/js/tools.js"></script> -->
 
-    <link rel="stylesheet" href="assets/css/index.css">
 
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/vendor/slider.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="assets/css/index.css">
+
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/vendor/icons.min.css">
     <link rel="stylesheet" href="assets/css/vendor/animation.min.css">
@@ -579,7 +580,7 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h5 class="modal-title" id="toolName">Tool Name</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        <button type="button" class="btn-close"  data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
         
                     <div class="modal-body d-flex flex-column">
@@ -620,11 +621,11 @@
                                 <button class="payment-btn btn btn-outline-primary" id="payWithPayPal">PayPal</button>
                             </div>
                         </div>
-                    <div>
-                        <button id="buyButton" class="btn mx-auto btn-primary smooth-anchor mt-10 buy-button" >
-                    <i class="icon-arrow-right-circle" style="margin-left: 5px;"></i> Proceed to buy
-                </button>
-                    </div>
+                        <div>
+                            <button id="buyButton" class="btn mx-auto btn-primary smooth-anchor mt-10 buy-button">
+                                <i class="icon-arrow-right-circle" style="margin-left: 5px;"></i> Proceed to buy
+                            </button>
+                        </div>
 
                     </div>
                 </div>
@@ -1149,13 +1150,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-md-6 p-3 text-center text-lg-left">
-                        <p>Designed with ❤️ by <a href="http://softwarewalaa.com/"> Toolswala </a></p>
+                        <p>Designed with ❤️ by <a href="http://amztools.org">AMZ Tools</a></p>
                         <!--
                                 Suggestion: Replace the text above with a description of your website.
                              -->
                     </div>
                     <div class="col-12 col-md-6 p-3 text-center text-lg-right">
-                        <p>© 2024 Copyright | All Rights Reserved by Toolswala <a href="#" target="_blank"></a>.
+                        <p>© 2024 Copyright | All Rights Reserved by AMZ Tools <a href="#" target="_blank"></a>.
                         </p>
                     </div>
                 </div>
