--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                 class="icon-speech"></i>CONTACT US</a>
                     </li> -->
                     <li class="nav-item mt-3 w-100">
-                        <a class="" target="_blank" href="https://app.toolswalaa.com/member"
+                        <a class="" target="_blank" href="https://amztoolshub.com/amember/member"
                             class="btn ml-lg-auto primary-button w-100">
                             <i class="icon-login"></i>
                             Login</a>
@@ -197,7 +197,7 @@
                                 class="icon-speech"></i>CONTACT US</a>
                     </li> -->
                     <li class="nav-item ml-3">
-                        <a target="_blank" href="https://app.toolswalaa.com/member"
+                        <a target="_blank" href="https://amztoolshub.com/amember/member"
                             class="btn ml-lg-auto primary-button ">
                             <i class="icon-login"></i>
                             Login</a>
@@ -256,7 +256,7 @@
                                 <div style="gap: 20px; flex-wrap: wrap;"
                             0        class="d-flex align-items-center justify-content-md-start justify-content-center w-max  mt-4 f">
 
-                                    <a target="_blank" href="https://app.toolswalaa.com/member"
+                                    <a target="_blank" href="https://amztoolshub.com/amember/member"
                                         class="btn  primary-button ">
                                         <i class="icon-login"></i>
                                         Login</a>
@@ -659,7 +659,7 @@
                         <!-- Contact Section -->
                         <div class="mt-4 d-flex flex-column align-items-center">
                             <p class="fw-bold mb-1">Contact Details</p>
-                            <a href="https://wa.me/918200891775" target="_blank" class="text-decoration-none text-success">
+                            <a href="https://wa.me/919558635166" target="_blank" class="text-decoration-none text-success">
                                 <!-- <i class="fab fa-whatsapp" style="font-size: 40px;"></i> WhatsApp Icon -->
                                 <img src="./assets/images/whatsapplogo.jpeg" alt="WhatsApp Contact" class="whatsapp-logo">
                             </a>
@@ -1423,7 +1423,7 @@
                                     </div>
 
                                     <div class="text-center mt-3">
-                                        <a href="https://wa.me/918200891775" target="_blank"
+                                        <a href="https://wa.me/919558635166" target="_blank"
                                             rel="noopener noreferrer" class="btn primary-button w-100">whatsapp</a>
                                     </div>
                                 </div>
@@ -1562,7 +1562,7 @@
                                         </div>
                                     </div>
                                     <div class="text-center mt-3">
-                                        <a href="https://wa.me/918200891775" target="_blank"
+                                        <a href="https://wa.me/919558635166" target="_blank"
                                             rel="noopener noreferrer" class="btn primary-button w-100">whatsapp</a>
                                     </div>
                                 </div>
@@ -1616,7 +1616,7 @@
 
 
     <div id="whatsappContact">
-        <a href="https://wa.me/918200891775" target="_blank" rel="noopener noreferrer">
+        <a href="https://wa.me/919558635166" target="_blank" rel="noopener noreferrer">
             <img src="./assets/images/whatsapplogo.jpeg" alt="WhatsApp Contact" class="whatsapp-logo">
         </a>
     </div>
