--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -156,7 +156,7 @@
               <li class="nav-item mt-3 w-100">
                 <a
                   target="_blank"
-                  href="https://app.toolswalaa.com/member"
+                  href="https://amztoolshub.com/amember/member"
                   class="btn ml-lg-auto primary-button w-100"
                 >
                   <i class="icon-login"></i>
@@ -213,7 +213,7 @@
             <li class="nav-item ml-3">
               <a
                 target="_blank"
-                href="https://app.toolswalaa.com/member"
+                href="https://amztoolshub.com/amember/member"
                 class="btn ml-lg-auto primary-button"
               >
                 <i class="icon-login"></i>
@@ -843,7 +843,7 @@
     </div> -->
     <div id="whatsappContact">
       <a
-        href="https://wa.me/918200891775"
+        href="https://wa.me/919558635166"
         target="_blank"
         rel="noopener noreferrer"
       >
