--- a/contact-us.html
+++ b/contact-us.html
@@ -130,7 +130,7 @@
                                 class="icon-speech"></i>CONTACT US</a>
                     </li> -->
                         <li class="nav-item mt-3 w-100">
-                            <a target="_blank" href="https://app.toolswalaa.com/member"
+                            <a target="_blank" href="https://amztoolshub.com/amember/member"
                                 class="btn ml-lg-auto primary-button w-100">
                                 <i class="icon-login"></i>
                                 Login</a>
@@ -185,7 +185,7 @@
                                 class="icon-speech"></i>CONTACT US</a>
                     </li> -->
                     <li class="nav-item ml-3">
-                        <a target="_blank" href="https://app.toolswalaa.com/member"
+                        <a target="_blank" href="https://amztoolshub.com/amember/member"
                             class="btn ml-lg-auto primary-button ">
                             <i class="icon-login"></i>
                             Login</a>
@@ -675,7 +675,7 @@
         </a>
     </div> -->
     <div id="whatsappContact">
-        <a href="https://wa.me/918200891775" target="_blank" rel="noopener noreferrer">
+        <a href="https://wa.me/919558635166" target="_blank" rel="noopener noreferrer">
             <img src="./assets/images/whatsapplogo.jpeg" alt="WhatsApp Contact" class="whatsapp-logo">
         </a>
     </div>
