--- a/refund-and-cancellation.html
+++ b/refund-and-cancellation.html
@@ -94,7 +94,7 @@
                     <!-- Leverage<i class="version-number">2.1</i> -->
 
                     <!-- Custom Logo -->
-                    <img src="assets/images/toolslogo.png" alt="Softwarewala">
+                    <img src="./assets/images/softwarewala.jpeg" alt="Softwarewala">
 
                 </a>
 
